--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fancy_photo_gallery_ui
-description: A fancy photo gallery based on a 3D Perspective Carousel animation.
+description: A fancy photo gallery carousel, based on a 3D Perspective animation
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
